--- a/index.html
+++ b/index.html
@@ -32,23 +32,19 @@
             </div>
             <div class="skills-wrapper">
               <h2 class="skills-h2">Skills:</h2>
-              <div class="uls">
-                <ul>
-                  <li>HTML</li>
-                  <li>SCSS</li>
-                  <li>CSS</li>
-                </ul>
 
-                <ul>
-                  <li>JAVASCRIPT</li>
-                  <li>JQUERY</li>
-                  <li>REACT</li>
-                </ul>
+              <div class="skills-icons-top">
+                <div class="html5"><i class="fab fa-html5"></i>HTML</div>
+                <div class="css3"><i class="fab fa-css3-alt"></i>CSS</div>
+                <div class="sass"><i class="fab fa-sass"></i>SASS</div>
+              </div>
 
-                <ul>
-                  <li>ADOBE XD</li>
-                  <li>PHOTOSHOP</li>
-                </ul>
+              <div class="skills-icons-middle">
+                <div class="jquery">
+                  <img src="files/jquery-icon.webp" />jQuery
+                </div>
+                <div class="js"><i class="fab fa-js"></i>JavaScript</div>
+                <div class="angular"><i class="fab fa-angular"></i>Angular</div>
               </div>
             </div>
           </div>
@@ -146,9 +142,9 @@
               </div>
             </div>
           </div>
+          <div class="footer"></div>
         </div>
       </div>
-      <div class="footer"></div>
     </div>
 
     <script
