--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <div class="projects">
           <div class="project">
-            <h3 class="projects-h3">Project Title</h3>
+            <h3 class="projects-h3">Websited</h3>
             <div class="proj1-img"></div>
             <div class="proj-desc"></div>
             <div class="proj-tech"></div>
@@ -99,7 +99,9 @@
               </div>
               <div class="proj-btns-inner">
                 <div class="fas-wrapper">
-                  <i class="far fa-eye"></i>
+                  <a href="projects/wix/project-websited.html"
+                    ><i class="far fa-eye"></i
+                  ></a>
                 </div>
               </div>
             </div>
